--- a/complex.html
+++ b/complex.html
@@ -13,7 +13,7 @@
     ></script>
 
     <title>Catalog | Complex</title>
-  <script defer src="/js/main.bundle.js"></script><link href="/styles/main.css" rel="stylesheet"></head>
+  <script defer src="/js/main.bundle.js"></script><link href="/styles/main.bundle.css" rel="stylesheet"></head>
 
   <body>
     <header class="header">
