--- a/nadgrobie.html
+++ b/nadgrobie.html
@@ -21,7 +21,7 @@
     <base href="/" />
 
     <title></title>
-  <script defer src="/js/main.bundle.js"></script><link href="/styles/main.css" rel="stylesheet"></head>
+  <script defer src="/js/main.bundle.js"></script><link href="/styles/main.bundle.css" rel="stylesheet"></head>
 
   <body>
     <header class="header">
