--- a/complex.html
+++ b/complex.html
@@ -6,6 +6,8 @@
     <meta http-equiv="Cache-Control" content="no-cache" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
+    <base href="." />
+
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -13,7 +15,7 @@
     ></script>
 
     <title>Catalog | Complex</title>
-  <script defer src="/js/main.bundle.js"></script><link href="/styles/main.bundle.css" rel="stylesheet"></head>
+  <script defer src="./js/main.bundle.js"></script><link href="./styles/main.bundle.css" rel="stylesheet"></head>
 
   <body>
     <header class="header">
