--- a/granite.html
+++ b/granite.html
@@ -6,8 +6,10 @@
     <meta http-equiv="Cache-Control" content="no-cache" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
+    <base href="." />
+
     <title>Catalog | Complex</title>
-  <script defer src="/js/main.bundle.js"></script><link href="/styles/main.bundle.css" rel="stylesheet"></head>
+  <script defer src="./js/main.bundle.js"></script><link href="./styles/main.bundle.css" rel="stylesheet"></head>
 
   <body>
     <header class="header">
