--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       crossorigin="anonymous"
     ></script>
 
-    <base href="/" />
+    <base href="." />
 
     <title></title>
-  <script defer src="/js/main.bundle.js"></script><link href="/styles/main.bundle.css" rel="stylesheet"></head>
+  <script defer src="./js/main.bundle.js"></script><link href="./styles/main.bundle.css" rel="stylesheet"></head>
 
   <body>
     <header class="header">
