--- a/vertical.html
+++ b/vertical.html
@@ -234,7 +234,7 @@
     <main class="global-wrap main">
       <div class="breadcrumbs">Главная / Каталог / Вертикальные памятники</div>
       <section class="catalog">
-        <h1 class="catalog__header">Каталог / Вертикальные памятники</h1>
+        <h1 class="catalog__header">Вертикальные памятники</h1>
         <div class="catalog__items">
           <div class="zm">
             <img
