--- a/contacts.html
+++ b/contacts.html
@@ -380,19 +380,21 @@
         </ul>
       </div>
       <div class="footer__section footer__section_border">
-        <a
-          href="tel:+375 (44) 747 74 51"
-          class="footer__contact footer__contact_viber"
-        >
-          +375 (44) 747 74 51
-          <img src="./assets/viber.svg" alt="viber" />
-        </a>
-        <a href="tel:+375 (44) 747 74 50" class="footer__contact"
-          >+375 (44) 747 74 50</a
-        >
-        <a href="tel:+375 (29) 174 15 45" class="footer__contact">
-          +375 (29) 174 15 45
-        </a>
+        <div class="footer__section_numbers">
+          <a
+            href="tel:+375 (44) 747 74 51"
+            class="footer__contact footer__contact_viber"
+          >
+            +375 (44) 747 74 51
+            <img src="./assets/viber.svg" alt="viber" />
+          </a>
+          <a href="tel:+375 (44) 747 74 50" class="footer__contact"
+            >+375 (44) 747 74 50</a
+          >
+          <a href="tel:+375 (29) 174 15 45" class="footer__contact">
+            +375 (29) 174 15 45
+          </a>
+        </div>
         <a href="mailto:memorialpinsk@mail.ru" class="footer__contact"
           >memorialpinsk@mail.ru</a
         >
@@ -413,7 +415,7 @@
         <p class="footer__address">
           <a target="_blank" href="https://yandex.by/maps/-/CCUFj-ChtB">
             Пинский р-н,
-            <br />
+            <!-- <br /> -->
             д. Галево, ул. Пинская, 2В
           </a>
         </p>
