--- a/complex.html
+++ b/complex.html
@@ -234,7 +234,7 @@
     <main class="global-wrap main">
       <div class="breadcrumbs">Главная / Каталог / Мемориальные комплексы</div>
       <section class="catalog">
-        <h1 class="catalog__header">Каталог / Мемориальные комплексы</h1>
+        <h1 class="catalog__header">Мемориальные комплексы</h1>
         <div class="catalog__items">
           <img
             src="../assets/catalog-complex/complex-1.png"
@@ -256,46 +256,116 @@
     </main>
 
     <footer class="global-wrap footer">
-      <div class="footer__section">
+      <div class="footer__section footer__section_logo">
         <div class="logo footer__logo">
           <p>Магазин</p>
           <p class="logo_accent">«ПАМЯТНИКИ»</p>
         </div>
       </div>
-      <div class="footer__section footer__section_border">
+      <div class="footer__section footer__section_nav footer__section_border">
         <ul class="nav__list nav__list_vertical">
           <li class="nav__list-item">
             <a href="#" class="nav__list-link">Главная</a>
           </li>
           <li class="nav__list-item">
-            <a href="#" class="nav__list-link">Каталог</a>
+            <a class="nav__list-link nav__dropdown_footer">
+              Каталог
+              <svg
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M6 9L6.35355 9.35355L6 9.70711L5.64645 9.35355L6 9ZM9.35355 6.35355L6.35355 9.35355L5.64645 8.64645L8.64645 5.64645L9.35355 6.35355ZM5.64645 9.35355L2.64645 6.35355L3.35355 5.64645L6.35355 8.64645L5.64645 9.35355Z"
+                  fill="white"
+                />
+                <path
+                  d="M6 6L6.35355 6.35355L6 6.70711L5.64645 6.35355L6 6ZM9.35355 3.35355L6.35355 6.35355L5.64645 5.64645L8.64645 2.64645L9.35355 3.35355ZM5.64645 6.35355L2.64645 3.35355L3.35355 2.64645L6.35355 5.64645L5.64645 6.35355Z"
+                  fill="white"
+                />
+              </svg>
+              <!-------->
+              <ul class="footer-subnav">
+                <li class="footer-subnav__item">
+                  <a href="./vertical.html" class="footer-subnav__item-link">
+                    Вертикальные памятники
+                  </a>
+                </li>
+                <li class="footer-subnav__item">
+                  <a href="./horizontal.html" class="footer-subnav__item-link">
+                    Горизонтальные памятники
+                  </a>
+                </li>
+                <li class="footer-subnav__item">
+                  <a href="./combo.html" class="footer-subnav__item-link">
+                    Кобинированные памятники
+                  </a>
+                </li>
+                <li class="footer-subnav__item">
+                  <a href="./complex.html" class="footer-subnav__item-link">
+                    Мемориальные комплексы
+                  </a>
+                </li>
+                <li class="footer-subnav__item">
+                  <a href="#" class="footer-subnav__item-link">
+                    Надгробные плиты
+                  </a>
+                </li>
+              </ul>
+            </a>
           </li>
           <li class="nav__list-item">
-            <a href="#" class="nav__list-link">Виды гранита</a>
+            <a href="./granite.html" class="nav__list-link">Виды гранита</a>
           </li>
           <li class="nav__list-item">
-            <a href="#" class="nav__list-link">Наши работы</a>
+            <a href="./examples.html" class="nav__list-link">Наши работы</a>
           </li>
           <li class="nav__list-item">
-            <a href="#" class="nav__list-link">Контакты</a>
+            <a href="./contacts.html" class="nav__list-link">Контакты</a>
           </li>
         </ul>
       </div>
       <div class="footer__section footer__section_border">
-        <a href="" class="footer__contact">+375 (44) 747 74 51</a>
-        <a href="" class="footer__contact">+375 (44) 747 74 50</a>
-        <a href="" class="footer__contact">memorialpinsk@mail.ru</a>
-        <a href="" class="footer__contact">pamyatniki_pinsk</a>
+        <div class="footer__section_numbers">
+          <a
+            href="tel:+375 (44) 747 74 51"
+            class="footer__contact footer__contact_viber"
+          >
+            +375 (44) 747 74 51
+            <img src="./assets/viber.svg" alt="viber" />
+          </a>
+          <a href="tel:+375 (44) 747 74 50" class="footer__contact"
+            >+375 (44) 747 74 50</a
+          >
+          <a href="tel:+375 (29) 174 15 45" class="footer__contact">
+            +375 (29) 174 15 45
+          </a>
+        </div>
+        <a href="mailto:memorialpinsk@mail.ru" class="footer__contact"
+          >memorialpinsk@mail.ru</a
+        >
+        <a
+          target="_blank"
+          href="https://www.instagram.com/pamyatniki_pinsk/"
+          class="footer__contact footer__contact_instagram"
+        >
+          <img src="./assets/instagram.png" alt="instagram" />
+          pamyatniki_pinsk
+        </a>
       </div>
-      <div class="footer__section">
+      <div class="footer__section footer__section_sm">
         <div class="footer__schedule">
           <p class="footer__schedule-item">Пн-Пт - 10.00-18.00</p>
           <p class="footer__schedule-item">Сб-Вс - 10.00-15.00</p>
         </div>
         <p class="footer__address">
-          Пинский р-н,
-          <br />
-          д. Галево, ул. Пинская, 2В
+          <a target="_blank" href="https://yandex.by/maps/-/CCUFj-ChtB">
+            Пинский р-н,
+            <!-- <br /> -->
+            д. Галево, ул. Пинская, 2В
+          </a>
         </p>
       </div>
     </footer>
