--- a/nadgrobie.html
+++ b/nadgrobie.html
@@ -295,7 +295,7 @@
             <a href="#" class="nav__list-link">Главная</a>
           </li>
           <li class="nav__list-item">
-            <a href="#" class="nav__list-link">
+            <a class="nav__list-link nav__dropdown_footer">
               Каталог
               <svg
                 width="12"
@@ -313,34 +313,86 @@
                   fill="white"
                 />
               </svg>
+              <!-------->
+              <ul class="footer-subnav">
+                <li class="footer-subnav__item">
+                  <a href="./vertical.html" class="footer-subnav__item-link">
+                    Вертикальные памятники
+                  </a>
+                </li>
+                <li class="footer-subnav__item">
+                  <a href="./horizontal.html" class="footer-subnav__item-link">
+                    Горизонтальные памятники
+                  </a>
+                </li>
+                <li class="footer-subnav__item">
+                  <a href="./combo.html" class="footer-subnav__item-link">
+                    Кобинированные памятники
+                  </a>
+                </li>
+                <li class="footer-subnav__item">
+                  <a href="./complex.html" class="footer-subnav__item-link">
+                    Мемориальные комплексы
+                  </a>
+                </li>
+                <li class="footer-subnav__item">
+                  <a href="#" class="footer-subnav__item-link">
+                    Надгробные плиты
+                  </a>
+                </li>
+              </ul>
             </a>
           </li>
           <li class="nav__list-item">
-            <a href="#" class="nav__list-link">Виды гранита</a>
+            <a href="./granite.html" class="nav__list-link">Виды гранита</a>
           </li>
           <li class="nav__list-item">
-            <a href="#" class="nav__list-link">Наши работы</a>
+            <a href="./examples.html" class="nav__list-link">Наши работы</a>
           </li>
           <li class="nav__list-item">
-            <a href="#" class="nav__list-link">Контакты</a>
+            <a href="./contacts.html" class="nav__list-link">Контакты</a>
           </li>
         </ul>
       </div>
       <div class="footer__section footer__section_border">
-        <a href="" class="footer__contact">+375 (44) 747 74 51</a>
-        <a href="" class="footer__contact">+375 (44) 747 74 50</a>
-        <a href="" class="footer__contact">memorialpinsk@mail.ru</a>
-        <a href="" class="footer__contact">pamyatniki_pinsk</a>
+        <div class="footer__section_numbers">
+          <a
+            href="tel:+375 (44) 747 74 51"
+            class="footer__contact footer__contact_viber"
+          >
+            +375 (44) 747 74 51
+            <img src="./assets/viber.svg" alt="viber" />
+          </a>
+          <a href="tel:+375 (44) 747 74 50" class="footer__contact"
+            >+375 (44) 747 74 50</a
+          >
+          <a href="tel:+375 (29) 174 15 45" class="footer__contact">
+            +375 (29) 174 15 45
+          </a>
+        </div>
+        <a href="mailto:memorialpinsk@mail.ru" class="footer__contact"
+          >memorialpinsk@mail.ru</a
+        >
+        <a
+          target="_blank"
+          href="https://www.instagram.com/pamyatniki_pinsk/"
+          class="footer__contact footer__contact_instagram"
+        >
+          <img src="./assets/instagram.png" alt="instagram" />
+          pamyatniki_pinsk
+        </a>
       </div>
-      <div class="footer__section">
+      <div class="footer__section footer__section_sm">
         <div class="footer__schedule">
           <p class="footer__schedule-item">Пн-Пт - 10.00-18.00</p>
           <p class="footer__schedule-item">Сб-Вс - 10.00-15.00</p>
         </div>
         <p class="footer__address">
-          Пинский р-н,
-          <br />
-          д. Галево, ул. Пинская, 2В
+          <a target="_blank" href="https://yandex.by/maps/-/CCUFj-ChtB">
+            Пинский р-н,
+            <!-- <br /> -->
+            д. Галево, ул. Пинская, 2В
+          </a>
         </p>
       </div>
     </footer>
